Update and rename mainpageportfolio.html to index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="inside_navbar">
 
             <div class="box1"  data-aos="fade-down" data-aos-delay="0" data-aos-once="true" data-aos-duration="300">
-            <a href="mainpageportfolio.html" class="boxs1">
+            <a href="index.html" class="boxs1">
                 <h2 class="koc">
                     <i class="fa">&#xf015;</i>Home
                 </h2>
