--- a/index.html
+++ b/index.html
@@ -104,29 +104,49 @@
     </div>
 
     <div class="container_2" id="im_the_project">   
-        <div class="inside_container_2" data-aos="fade-down" data-aos-delay="0" data-aos-once="true" data-aos-duration="300">
-        <h1>My Projects</h1>
+        <div class="inside_container_2">
+        <div id="title_project" data-aos="fade-down" data-aos-delay="0" data-aos-once="true" data-aos-duration="300">
+            <div id="inside_title_project">
+            <h1 style="color: aliceblue; font-size: 2.5rem;">My Projects</h1>
+            </div>
+        </div>
 
         <div class="myproject_items">
-            <div class="project_items">
+
+            <div class="project_items" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="300">
+                <div class="inside_project_items">
+                <a class="box_1">
+                    <img src="images/myproject_img/1.JPG">
+                </a>
+                </div>
+                <div>
+                <h2>Ortigas Land Web Development</h2>
+                </div>
+            </div>
+
+            <div class="project_items" data-aos="fade-down" data-aos-delay="600" data-aos-once="true" data-aos-duration="300">
+                <div class="inside_project_items">
+                <a class="box_1">
+                    <img src="images/myproject_img/1.JPG">
+                </a>
+                </div>
                 <h2>Ortigas Land Web Development</h2>
             </div>
 
-            <div class="project_items">
+            <div class="project_items" data-aos="fade-down" data-aos-delay="900" data-aos-once="true" data-aos-duration="300">
+                <div class="inside_project_items">
+                <a class="box_1">
+                    <img src="images/myproject_img/1.JPG">
+                </a>
+                </div>
                 <h2>Ortigas Land Web Development</h2>
             </div>
 
-            <div class="project_items">
+            <div class="project_items" data-aos="fade-down" data-aos-delay="1200" data-aos-once="true" data-aos-duration="300">
                 <h2>Ortigas Land Web Development</h2>
             </div>
 
-            <div class="project_items">
-                <h2>Ortigas Land Web Development</h2>
-            </div>
-
-            <div class="project_items">
-                <h2>Ortigas Land Web Development</h2>
-            </div>
+            
         
         </div>
         </div>
