https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -114,36 +114,31 @@
         <div class="myproject_items">
 
             <div class="project_items" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="300">
-                <div class="inside_project_items">
                 <a class="box_1">
                     <img src="images/myproject_img/1.JPG">
                 </a>
-                </div>
-                <div>
-                <h2>Ortigas Land Web Development</h2>
-                </div>
+                <h2>Ortigas Land Web Development</h2>      
             </div>
 
             <div class="project_items" data-aos="fade-down" data-aos-delay="600" data-aos-once="true" data-aos-duration="300">
-                <div class="inside_project_items">
                 <a class="box_1">
                     <img src="images/myproject_img/1.JPG">
                 </a>
-                </div>
                 <h2>Ortigas Land Web Development</h2>
             </div>
 
-            <div class="project_items" data-aos="fade-down" data-aos-delay="900" data-aos-once="true" data-aos-duration="300">
-                <div class="inside_project_items">
+            <div class="project_items" data-aos="fade-down" data-aos-delay="900" data-aos-once="true" data-aos-duration="300"> 
                 <a class="box_1">
                     <img src="images/myproject_img/1.JPG">
                 </a>
-                </div>
-                <h2>Ortigas Land Web Development</h2>
+                <h2>Ortigas Land Web Development</h2> 
             </div>
 
             <div class="project_items" data-aos="fade-down" data-aos-delay="1200" data-aos-once="true" data-aos-duration="300">
-                <h2>Ortigas Land Web Development</h2>
+                <a class="box_1">
+                    <img src="images/myproject_img/1.JPG">
+                </a>
+                 <h2>Ortigas Land Web Development</h2> 
             </div>
 
             
