https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="nav_bar">
         <div class="inside_navbar">
 
-            <!-- <div class="box1"  data-aos="fade-down" data-aos-delay="0" data-aos-once="true" data-aos-duration="300">
+            <div class="box1"  data-aos="fade-down" data-aos-delay="0" data-aos-once="true" data-aos-duration="300">
             <a href="index.html" class="boxs1">
                 <h2 class="koc">
                     <i class="fa">&#xf015;</i>Home
@@ -48,7 +48,7 @@
                     <i class='fas'>&#xf879;</i>Contact Me
                 </h2>
             </a>
-            </div> -->
+            </div>
         
         </div>
         
