https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -124,21 +124,21 @@
                 <a class="box_1">
                     <img src="images/myproject_img/1.JPG">
                 </a>
-                <h2>Ortigas Land Web Development</h2>
+                <h2>No project yet</h2>
             </div>
 
             <div class="project_items" data-aos="fade-down" data-aos-delay="900" data-aos-once="true" data-aos-duration="300"> 
                 <a class="box_1">
                     <img src="images/myproject_img/1.JPG">
                 </a>
-                <h2>Ortigas Land Web Development</h2> 
+                <h2>No Project Yet</h2> 
             </div>
 
             <div class="project_items" data-aos="fade-down" data-aos-delay="1200" data-aos-once="true" data-aos-duration="300">
                 <a class="box_1">
                     <img src="images/myproject_img/1.JPG">
                 </a>
-                 <h2>Ortigas Land Web Development</h2> 
+                 <h2>No Project Yet</h2> 
             </div>
 
         </div>
