https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="text_inside_container_1">
             <h2>Hello</h2>
-            <h2>Edward B. Ronquillo</h2>
+            <h2>Edward B. Ronquillos</h2>
             </div>
 
         </div>
