--- a/index.html
+++ b/index.html
@@ -78,8 +78,25 @@
             </div>
 
             <div class="text_inside_container_1">
-            <h2>Hello</h2>
-            <h2>Edward B. Ronquillo</h2>
+            <h2 style="color: orangered;" data-aos="fade-right" data-aos-delay="300" data-aos-once="true" data-aos-duration="100">Hello</h2>
+            <h2 style="color: rgb(67, 68, 68);" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="500">Edward B. Ronquillo</h2>
+            </div>
+
+            <div class="ClickMe">
+                <a href="https://www.facebook.com/edwardronquillo3" target="_blank" class="logo" data-aos="fade-right" data-aos-delay="600" data-aos-once="true" data-aos-duration="100"><i style="font-size: 24px;" class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/edward-ronquillo-166584262" class="logo" target="_blank" class="ko" data-aos="fade-up" data-aos-delay="900" data-aos-once="true" data-aos-duration="100"><i style="font-size: 24px;" class="fa-brands fa-sqaure-linkedin">&#xf08c;</i></a>
+                <a href="https://github.com/mebronquillo" target="_blank" class="logo" data-aos="fade-up" data-aos-delay="1200" data-aos-once="true" data-aos-duration="100"><i style="font-size: 24px;" class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/_edwardronquillo_" class="logo" target="_blank" class="ko" data-aos="fade-left" data-aos-delay="1500" data-aos-once="true" data-aos-duration="100"><i style="font-size: 24px;" class="fa-brands fa-instagram"></i></a>
+            </div>
+
+            <div class="AboutMe">
+                <p data-aos="fade-up" data-aos-delay="0" data-aos-once="false" data-aos-duration="600">
+                    A Bachelor's degree in computer science, I am eager to leverage my academic 
+                    foundation passionate about Web Developer. I am dedicated to applying my knowledge 
+                    and skills and innovation and efficient solutions that will derive to the organizations 
+                    to success. Hardworking passionate job seeker with strong organization skills and to secure 
+                    entry-level Web developer position. Ready to help team achieve company goals.
+                </p>
             </div>
 
         </div>
