https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     foundation passionate about Web Developer. I am dedicated to applying my knowledge 
                     and skills and innovation and efficient solutions that will derive to the organizations 
                     to success. Hardworking passionate job seeker with strong organization skills and to secure 
-                    entry-level Web developer position. Ready to help team achieve company goals.
+                    entry-level Web developer position. Ready to help team achieve company goals. kupal
                 </p>
             </div>
 
