https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&amp;display=swap" rel="stylesheet">
     
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="HandheldFriendly" content="true">
     <script src="https://kit.fontawesome.com/ca5b5893a8.js" crossorigin="anonymous"></script>
 </head>
 
@@ -78,7 +79,7 @@
             </div>
 
             <div class="text_inside_container_1">
-            <h2 style="color: orangered;" data-aos="fade-right" data-aos-delay="300" data-aos-once="true" data-aos-duration="100">Hello</h2>
+            <h2 style="color: orangered;" data-aos="fade-right" data-aos-delay="300" data-aos-once="true" data-aos-duration="100">Hello,</h2>
             <h2 style="color: rgb(67, 68, 68);" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="500">Edward B. Ronquillo</h2>
             </div>
 
@@ -90,12 +91,12 @@
             </div>
 
             <div class="AboutMe">
-                <p data-aos="fade-up" data-aos-delay="0" data-aos-once="false" data-aos-duration="600">
+                <p data-aos="fade-up" data-aos-delay="500" data-aos-once="false" data-aos-duration="100">
                     A Bachelor's degree in computer science, I am eager to leverage my academic 
                     foundation passionate about Web Developer. I am dedicated to applying my knowledge 
                     and skills and innovation and efficient solutions that will derive to the organizations 
                     to success. Hardworking passionate job seeker with strong organization skills and to secure 
-                    entry-level Web developer position. Ready to help team achieve company goals. kupal
+                    entry-level Web developer position. Ready to help team achieve company goals.
                 </p>
             </div>
 
