https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         <div class="inside_container_1">
 
             <div class="profile_pic">
-                <img src="images/container_1/2x2_Edward.png" alt="Edward B. Ronquillo" class="me_image" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="500">
+                <img src="images/container_1/2x2_Edward.png" alt="Edward B. Ronquillo" class="me_image" data-aos="fade-down" data-aos-delay="0" data-aos-once="true" data-aos-duration="500">
             </div>
 
             <div class="text_inside_container_1">
             <h2 style="color: orangered;" data-aos="fade-right" data-aos-delay="300" data-aos-once="true" data-aos-duration="100">Hello,</h2>
-            <h2 style="color: rgb(67, 68, 68);" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="500">Edward B. Ronquillo</h2>
+            <h2 style="color: rgb(67, 68, 68);" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="500">Im Edward B. Ronquillo</h2>
             </div>
 
             <div class="ClickMe">
