--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
     </div>
 
     <div class="container_2" id="im_the_project">   
-        koko
+        <div class="inside_container_2">
+
+        </div>
     </div>
+
     </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
