https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
             <div class="text_inside_container_1">
             <h2 class="ello" style="color: orangered;" data-aos="fade-right" data-aos-delay="300" data-aos-once="true" data-aos-duration="100">Hello,</h2>
+            <h2 class="ello1" style="color: orangered;" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="100">Hello,</h2>
             <h2 class="imed"style="color: rgb(67, 68, 68);" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="500">I'm Edward B. Ronquillo</h2>
             </div>
 
