https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="AboutMe">
-                <p data-aos="fade-up" data-aos-delay="500" data-aos-once="false" data-aos-duration="100">
+                <p data-aos="fade-up" data-aos-delay="1650" data-aos-once="false" data-aos-duration="300">
                     A Bachelor's degree in computer science, I am eager to leverage my academic 
                     foundation passionate about Web Developer. I am dedicated to applying my knowledge 
                     and skills and innovation and efficient solutions that will derive to the organizations 
@@ -106,6 +106,10 @@
 
     <div class="container_2" id="im_the_project">   
         <div class="inside_container_2">
+            
+            <div class="myproj_title">
+                <h2 class="myproj">Projects</h2>
+            </div>
 
         </div>
     </div>
