https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -104,16 +104,11 @@
         </div>
     </div>
 
-    <div class="container_2" id="im_the_project">   
+    <div class="container_2">   
         <div class="inside_container_2">
             
-            <div class="myproj_title">
-                <h2 class="myproj">Projects</h2>
-            </div>
-
+            
         </div>
-    </div>
-
     </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
