https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="AboutMe">
-                <p data-aos="fade-up" data-aos-delay="1650" data-aos-once="false" data-aos-duration="300">
+                <p data-aos="fade-up" data-aos-delay="1650" data-aos-once="true" data-aos-duration="300">
                     A Bachelor's degree in computer science, I am eager to leverage my academic 
                     foundation passionate about Web Developer. I am dedicated to applying my knowledge 
                     and skills and innovation and efficient solutions that will derive to the organizations 
@@ -104,9 +104,27 @@
         </div>
     </div>
 
-    <div class="container_2">   
+    <div class="container_2" id="im_the_project">   
         <div class="inside_container_2">
             
+            <div class="myproj_title" data-aos="fade-down" data-aos-delay="0" data-aos-once="true" data-aos-duration="300">
+                <h2 class="my_projects" >My Projects</h2>
+            </div>
+
+            <div class="myproj_">      
+                <a class="inside_proj_1" href="">
+                    <div class="myproj_img">
+                        <div class="myproj_img1">
+                            <img src="images/myproject_img/1.JPG">
+                        </div>
+                    </div>
+                </a>
+                <h2>Ortigas Land</h2>
+
+                <div>
+                <p>Description</p>
+                </div>
+            </div>
             
         </div>
     </div>
@@ -134,7 +152,7 @@
     </div>
 
     <div class="footer">
-        <p>@ 2025 - Create by Edward</p>
+        <p>@ 2025 - Footered</p>
     </div>
 
     </div>
