https://github.com/mebronquillo/Edward-Web-Portfolio.git

--- a/index.html
+++ b/index.html
@@ -113,22 +113,22 @@
 
             <div class="myproj_">      
                 
-                    <div class="myproj_img"data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="300">
+                    <div class="myproj_img">
                         <div class="myproj_img1">
-                            <a class="inside_proj_1" href="https://mebronquillo.github.io/Web_project/mainwebsite">
+                            <a class="inside_proj_1" href="https://mebronquillo.github.io/Web_project/mainwebsite" data-aos="fade-down" data-aos-delay="300" data-aos-once="true" data-aos-duration="300">
                                 <img src="images/myproject_img/1.JPG">
                             </a>
 
-                            <h2>Ortigas Land Website</h2>
+                            <h2 data-aos="fade-down" data-aos-delay="600" data-aos-once="true" data-aos-duration="300">Ortigas Land Website</h2>
 
                         <div class="description_proj">
-                            <p>A full stack web developement for customer inquiring hotel room and land. Also this website is already exist, 
+                            <p data-aos="flip-left" data-aos-delay="900" data-aos-once="true" data-aos-duration="300">A full stack web developement, this is for customer inquiring hotel room and land. Also this website is already exist, 
                                 but some client call me build the clone version of this website.
                                 Built using HTML, CSS, JavaScript, PHP, MySQL and Python and today is currently working on progress.
                             </p>
                             <div class="proj_btn">
-                            <a href="https://github.com/mebronquillo/Web_project" target="_blank">Source Code</a>
-                            <a href="https://mebronquillo.github.io/Web_project/mainwebsite" target="_blank">Live View</a>
+                            <a href="https://github.com/mebronquillo/Web_project" target="_blank" data-aos="fade-right" data-aos-delay="300" data-aos-once="true" data-aos-duration="400">Source Code</a>
+                            <a href="https://mebronquillo.github.io/Web_project/mainwebsite" target="_blank" data-aos="fade-left" data-aos-delay="300" data-aos-once="true" data-aos-duration="400">Live View</a>
                             </div>
                         </div>
                         </div>
