--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     </div>
 
                     <div class="nav_box2"><!--Sql Database-->
-                        <h3>SQL DatabaseSS</h3>
+                        <h3>SQL Database</h3>
                         <p>
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
