--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <a href="https://www.instagram.com/_edwardronquillo_" class="logo" target="_blank" class="ko" data-aos="fade-left" data-aos-delay="1500" data-aos-once="true" data-aos-duration="100"><i style="font-size: 24px;" class="fa-brands fa-instagram"></i></a>
             </div>
 
+            <!-- Remove this.... this is only for about me -->
             <div class="AboutMe">
                 <p data-aos="fade-up" data-aos-delay="1650" data-aos-once="true" data-aos-duration="300">
                     A Bachelor's degree in computer science, I am eager to leverage my academic 
@@ -278,8 +279,10 @@
                 <div class="box_details">
 
                     <div class="nav_box"><!--Web Design/Front-end-->
-                        <h3>Web Design/Front-End</h3>   
-                        <p>
+                        <h3 class="title_box">
+                            <i class="fa-solid fa-code" style="color: gray; font-size: 25px;"></i>Web Design/Front-End
+                        </h3>                     
+                        <p style="color: white;">
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
@@ -289,8 +292,10 @@
                     </div>
 
                     <div class="nav_box1"><!--Web Development-->
-                        <h3>Web Development</h3>
-                        <p>
+                        <h3 class="title_box">
+                            <i class="fa-solid fa-window-maximize" style="color: gray; font-size: 25px;"></i>Web Development
+                        </h3>
+                        <p style="color: white;">
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
@@ -300,19 +305,24 @@
                     </div>
 
                     <div class="nav_box2"><!--Sql Database-->
-                        <h3>SQL Database</h3>
-                        <p>
+                        <h3 class="title_box">
+                            <i class="fa-solid fa-database" style="color: gray; font-size: 25px;"></i>SQL Database
+                        </h3>
+                        <p style="color: white;">
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
+                            
                         </p>  
                     </div>
 
                     <div class="nav_box3"><!--Cycling Ride-->
-                        <h3>Cycling Ride</h3>
-                        <p>
+                        <h3 class="title_box">
+                            <i class="fa-solid fa-person-biking" style="color: gray; font-size: 25px;"></i>Cyclist
+                        </h3>
+                        <p style="color: white;">
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
                             Blah blah blah Blah blah blah
