--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
                 </div>
             </div>
         </div>
+        
         <div class="nav_body_1">
             <div class="aboutme_details">
 
@@ -278,20 +279,18 @@
                 <h2>What I'm Doing</h2>
                 <div class="box_details">
 
-                    <div class="nav_box"><!--Web Design/Front-end-->
+                    <div class="nav_box">
                         <h3 class="title_box">
                             <i class="fa-solid fa-code" style="color: gray; font-size: 25px;"></i>Web Design/Front-End
                         </h3>                     
                         <p style="color: white;">
-                            Blah blah blah Blah blah blah
-                            Blah blah blah Blah blah blah
-                            Blah blah blah Blah blah blah
-                            Blah blah blah Blah blah blah
-                            Blah blah blah Blah blah blah
+                            I'm a web designer. I create websites that are functional, user-friendly, and visually appealing.
+                            I use a variety of tools and technologies to create websites, including HTML, CSS, JavaScript, and various web design software.
+                            I also have a strong understanding of user experience (UX) design principles, which helps me create websites that are easy to navigate and use.
                         </p>          
                     </div>
 
-                    <div class="nav_box1"><!--Web Development-->
+                    <div class="nav_box1">
                         <h3 class="title_box">
                             <i class="fa-solid fa-window-maximize" style="color: gray; font-size: 25px;"></i>Web Development
                         </h3>
@@ -304,7 +303,7 @@
                         </p>  
                     </div>
 
-                    <div class="nav_box2"><!--Sql Database-->
+                    <div class="nav_box2">
                         <h3 class="title_box">
                             <i class="fa-solid fa-database" style="color: gray; font-size: 25px;"></i>SQL Database
                         </h3>
@@ -318,7 +317,7 @@
                         </p>  
                     </div>
 
-                    <div class="nav_box3"><!--Cycling Ride-->
+                    <div class="nav_box3">
                         <h3 class="title_box">
                             <i class="fa-solid fa-person-biking" style="color: gray; font-size: 25px;"></i>Cyclist
                         </h3>
