--- a/index.html
+++ b/index.html
@@ -203,9 +203,10 @@
                         <p>Edward Ronquillo</p>
                     </div>
                 </div>
-                <form class="inside_div_form">
-                    <input type="text" placeholder="NAME" required>
-                    <input type="email" placeholder="EMAIL" required>
+                <form action="https://api.web3forms.com/submit" method="POST" class="inside_div_form">
+                    <input type="hidden" name="access_key" value="3326551d-8c59-453e-9a5d-21f99fe5565f">
+                    <input type="text" name="name" placeholder="NAME" required>
+                    <input type="email" name="email" placeholder="EMAIL" required>
                     <textarea type=message placeholder="YOUR MESSAGE" rows="2"></textarea>
                     <button type="submit"><i style="font-size: 24px;" class="material-icons">&#xe163;</i><p>Send Message</p></button>
                 </form>
