--- a/index.html
+++ b/index.html
@@ -393,7 +393,19 @@
         </div>
     </div>
 
-    
+    <div>
+        <h2>my current size of web</h2>
+        <p id="demo"></p>
+    </div>
+    <script>
+        var w = window.innerWidth;
+var h = window.innerHeight;
+
+var x = document.getElementById("demo");
+x.innerHTML = "Width: " + w + "px" + "<br>" + "Height: " + h + "px";
+
+
+    </script>
     <!-- Download my resume -->
     <div class="footer">
         <p>@ 2025 - Coded by Edward Ronquillo</p>
