--- a/index.html
+++ b/index.html
@@ -393,6 +393,17 @@
         </div>
     </div>
 
+    <div>
+        <h2>My current size of web</h2>
+        <p id="demo"></p>
+    </div>
+    <script>
+        var w = window.innerWidth;
+        var h = window.innerHeight;
+
+        var x = document.getElementById("demo");
+        x.innerHTML = "Width: " + w + "px" + "<br>" + "Height: " + h + "px";
+    </script>
     
     <!-- Download my resume -->
     <div class="footer">
