--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="nav_bar" id="nav_id"> <!--id here is for nav animation menu-->
         <div class="inside_navbar" >
 
-            <div class="box1"  data-aos="fade-right" data-aos-delay="0" data-aos-once="true" data-aos-duration="300">
-            <a href="index.html" class="boxs1">
+            <div class="box1"  data-aos="fade-right" data-aos-delay="0" data-aos-once="true" data-aos-duration="300" >
+            <a href="index.html" class="boxs1" id="smallbox">
 
                 <div class="koma">
                 <i class="fas">&#xf015;</i>
@@ -32,7 +32,7 @@
             </div>
 
             <div class="box1" data-aos="fade-right" data-aos-delay="300" data-aos-once="true" data-aos-duration="300">
-            <a onclick="direct_to_project()" class="boxs1">
+            <a onclick="direct_to_project()" class="boxs1" id="smallbox1">
 
                 <div class="koma">
                 <i class='fas'>&#xf07b;</i>
@@ -45,8 +45,8 @@
             </div>
 
             <!--  -->
-            <div class="box1" id="aos_anims">
-            <a onclick="direct_to_aboutme();  close_nav1()" class="boxs1" data-aos="fade-right" data-aos-delay="600" data-aos-once="true" data-aos-duration="300">
+            <div class="box1" data-aos="fade-right" data-aos-delay="600" data-aos-once="true" data-aos-duration="300">
+            <a onclick="direct_to_aboutme();  close_nav1()" class="boxs1" id="smallbox2">
 
                 <div class="koma">
                 <i class=fas>&#xf2bd;</i>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="box1"  data-aos="fade-right" data-aos-delay="900" data-aos-once="true" data-aos-duration="300">
-            <a onclick="direct_to_contactme()" class="boxs1">
+            <a onclick="direct_to_contactme()" class="boxs1" id="smallbox3">
                 
                 <div class="koma">
                 <i class='fas'>&#xf879;</i>
