update ulet hayss wow

--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@
                             <h2 data-aos="fade-down" data-aos-delay="600" data-aos-once="true" data-aos-duration="400">Ortigas Land Website</h2>
 
                         <div class="description_proj">
-                            <p data-aos="flip-left" data-aos-delay="300" data-aos-once="true" data-aos-duration="400">
+                            <p data-aos="flip-left" data-aos-delay="900" data-aos-once="true" data-aos-duration="400">
                                 A full stack web development, this is for customer inquiring hotel room and land. Also this website is already exist, 
                                 but one of the client working here, contact me and build the clone version of this website.
                                 Built using HTML, CSS, JavaScript, Java/Python, MySQL and Python and today is still currently working on progress.
                             </p>
                             <div class="proj_btn">
-                            <a href="https://github.com/mebronquillo/Web_project" target="_blank" data-aos="fade-right" data-aos-delay="300" data-aos-once="true" data-aos-duration="400">Source Code</a>
-                            <a href="https://mebronquillo.github.io/Web_project/mainwebsite" target="_blank" data-aos="fade-left" data-aos-delay="300" data-aos-once="true" data-aos-duration="400">Live View</a>
+                            <a href="https://github.com/mebronquillo/Web_project" target="_blank" data-aos="fade-right" data-aos-delay="1150" data-aos-once="true" data-aos-duration="400">Source Code</a>
+                            <a href="https://mebronquillo.github.io/Web_project/mainwebsite" target="_blank" data-aos="fade-left" data-aos-delay="1150" data-aos-once="true" data-aos-duration="400">Live View</a>
                             </div>
                         </div>
                         </div>
                     </div>
 
-                    <div class="visit_git">
+                    <div class="visit_git" data-aos="fade-left" data-aos-delay="1500" data-aos-once="true" data-aos-duration="400">
                         <h2>Other than that check my <a class="github_direct" href="https://github.com/mebronquillo" target="_blank" style="color: orangered;">Github</a> for updates or look other of my projects</h2>
                     </div>
             </div>
@@ -194,7 +194,7 @@
     <div class="container_3" id="im_the_contactme">
         <div class="inside_container_3">
 
-            <div class="mycont_tile">
+            <div class="mycont_tile" data-aos="fade-down" data-aos-delay="0" data-aos-once="true" data-aos-duration="400">
                 <h2 class="mycontact_title">Contact Me</h2>
             </div>
 
