remove the size web

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         </div>
     </div>
 
-    <div>
+    <!-- <div>
         <h2>My current size of web</h2>
         <p id="demo"></p>
     </div>
@@ -408,7 +408,7 @@
 
         var x = document.getElementById("demo");
         x.innerHTML = "Width: " + w + "px" + "<br>" + "Height: " + h + "px";
-    </script>
+    </script> -->
     
     <!-- Download my resume -->
     <div class="footer">
