--- a/send.html
+++ b/send.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title>Send Message</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="send.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container1">
         <h1>Thank you for sending message</h1>
 
         <h3>I read it soon!! :3</h3>
+
+        <a href="index.html">Return to Main page</a>
     </div>
 </body>
 </html>
